Remove Autoloader and using classmap

--- a/build.xml
+++ b/build.xml
@@ -11,9 +11,8 @@
 	
 	<target name="dist">
 		<fileset dir="wp-upcloo" id="upcloo-base">
-            <include name="*"/>
+            <include name="*/**"/>
             <exclude name="vendor"/>
-			<exclude name="**/*.md"/>
         </fileset>
 		<fileset dir="wp-upcloo/vendor/upcloo-sdk/src" id="upcloo-sdk">
             <include name="*/**" />
