--- a/build.xml
+++ b/build.xml
@@ -11,7 +11,8 @@
 	
 	<target name="dist">
 		<fileset dir="wp-upcloo" id="upcloo-base">
-            <include name="*/**"/>
+            <include name="*"/>
+			<include name="UpCloo/**"/>
             <exclude name="vendor"/>
         </fileset>
 		<fileset dir="wp-upcloo/vendor/upcloo-sdk/src" id="upcloo-sdk">
@@ -23,7 +24,7 @@
 			<fileset refid="upcloo-base" />
 		</copy>
 
-		<copy todir="${dist}/wp-upcloo/upcloo-sdk/src" verbose="true">
+		<copy todir="${dist}/wp-upcloo/vendor/upcloo-sdk/src" verbose="true">
 		  <fileset refid="upcloo-sdk" />
 		</copy>
 	</target>
