--- a/build.xml
+++ b/build.xml
@@ -8,8 +8,20 @@
 	<!-- set global properties for this build -->
     <property name="src" location="wp-upcloo"/>
     <property name="dist"  location="dist"/>
+	<property name="version" value="1.1.8-gertrude" />
 	
-	<target name="dist">
+	<target name="dist" depends="copy-resources, zip-resources">
+	   
+	</target>
+	
+	<target name="zip-resources">
+		<zipfileset dir="${dist}/wp-upcloo" id="zip-upcloo"></zipfileset>
+		<zip destfile="${dist}/wp-upcloo-${version}.zip">
+		    <zipfileset refid="zip-upcloo"></zipfileset>
+		</zip>
+	</target>
+	
+	<target name="copy-resources">
 		<fileset dir="wp-upcloo" id="upcloo-base">
             <include name="*"/>
 			<include name="UpCloo/**"/>
