--- a/build.xml
+++ b/build.xml
@@ -7,7 +7,7 @@
 
 	<!-- set global properties for this build -->
     <property name="src" location="wp-upcloo"/>
-	<property name="version" value="1.2.0-rc2" />
+	<property name="version" value="1.2.1" />
     <property name="dist"  location="dist/${version}"/>
 
 	<target name="dist" depends="copy-resources, zip-resources">
