--- a/build.xml
+++ b/build.xml
@@ -6,7 +6,7 @@
     </description>
 
 	<!-- set global properties for this build -->
-    <property name="src" location="wp-upcloo"/>
+    <property name="src" location="upcloo"/>
 	<property name="version" value="1.3.0" />
     <property name="dist"  location="dist/${version}"/>
 
@@ -16,13 +16,13 @@
 
 	<target name="zip-resources">
         <zipfileset dir="${dist}" id="zip-upcloo"></zipfileset>
-		<zip destfile="${dist}/wp-upcloo-${version}.zip">
+		<zip destfile="${dist}/upcloo-${version}.zip">
 		    <zipfileset refid="zip-upcloo"></zipfileset>
 		</zip>
 	</target>
 
 	<target name="copy-resources">
-		<fileset dir="wp-upcloo" id="upcloo-base">
+		<fileset dir="upcloo" id="upcloo-base">
             <include name="*"/>
 			<include name="UpCloo/**"/>
 			<include name="views/**"/>
@@ -34,7 +34,7 @@
             <exclude name="**/*.swo"/>
         </fileset>
 
-		<copy todir="${dist}/wp-upcloo" verbose="true">
+		<copy todir="${dist}/upcloo" verbose="true">
 			<fileset refid="upcloo-base" />
 		</copy>
 	</target>
