--- a/build.xml
+++ b/build.xml
@@ -6,8 +6,8 @@
     </description>
 
 	<!-- set global properties for this build -->
-    <property name="src" location="upcloo"/>
-	<property name="version" value="1.3.1" />
+    <property name="src" location="upcloo-altervista"/>
+	<property name="version" value="1.3.2-altervista" />
     <property name="dist"  location="dist/${version}"/>
 
 	<target name="dist" depends="copy-resources, zip-resources">
@@ -22,7 +22,7 @@
 	</target>
 
 	<target name="copy-resources">
-		<fileset dir="upcloo" id="upcloo-base">
+        <fileset dir="${src}" id="upcloo-base">
             <include name="*"/>
 			<include name="UpCloo/**"/>
 			<include name="views/**"/>
@@ -32,9 +32,10 @@
             <exclude name="vendor"/>
             <exclude name="**/*.swp"/>
             <exclude name="**/*.swo"/>
+            <exclude name="**/*.swn"/>
         </fileset>
 
-		<copy todir="${dist}/upcloo" verbose="true">
+        <copy todir="${dist}/upcloo-altervista" verbose="true">
 			<fileset refid="upcloo-base" />
 		</copy>
 	</target>
